Database Connection and Updation haven been done.

--- a/Notes/Notes.API/appsettings.json
+++ b/Notes/Notes.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "NotesDbConnectionString": "server=DESKTOP-747SQSI;database=NotesDb;Trusted_Connection=true"
+  }
 }
